TLAB-441 Improve mobile display, fix flex not wrapping correctly to full-width columns

--- a/themes/trafiklab-2024/assets/sass/_grid.scss
+++ b/themes/trafiklab-2024/assets/sass/_grid.scss
@@ -1,49 +1,71 @@
 .tl-row {
+  --col-gap: 16px;
   // No left or right margins here!
   display: flex;
   flex-direction: row;
-  gap: 16px;
+  flex-wrap: wrap;
+  gap: var(--col-gap);
 
   &.tl-row--large-gap {
-    gap: 32px;
+    --col-gap: 32px;
   }
 
   .tl-col {
     flex-grow: 1;
+    flex-shrink: 0;
   }
 
   @for $i from 1 through 12 {
     .tl-col--#{$i} {
-      flex-basis: 100% * $i/12;
+      flex-grow: 1;
+      flex-shrink: 0;
+      flex-basis: calc(100% * #{$i} / 12 - var(--col-gap));
     }
   }
 
-  @media screen and (max-width: $breakpoint-sm) {
+  @media screen and (max-width: $breakpoint-xs) {
     @for $i from 1 through 12 {
       .tl-col--xs-#{$i} {
-        flex-basis: 100% * $i/12;
+        flex-grow: 1;
+        flex-shrink: 0;
+        flex-basis: calc(100% * #{$i} / 12 - var(--col-gap));
+      }
+    }
+  }
+  @media screen and (min-width: $breakpoint-xs) {
+    @for $i from 1 through 12 {
+      .tl-col--sm-#{$i} {
+        flex-grow: 1;
+        flex-shrink: 0;
+        flex-basis: calc(100% * #{$i} / 12 - var(--col-gap));
       }
     }
   }
   @media screen and (min-width: $breakpoint-sm) {
     @for $i from 1 through 12 {
-      .tl-col--sm-#{$i} {
-        flex-basis: 100% * $i/12;
-      }
-    }
-  }
-  @media screen and (min-width: $breakpoint-md) {
-    @for $i from 1 through 12 {
       .tl-col--md-#{$i} {
-        flex-basis: 100% * $i/12;
+        flex-grow: 1;
+        flex-shrink: 0;
+        flex-basis: calc(100% * #{$i} / 12 - var(--col-gap));
       }
     }
   }
 
-  @media screen and (min-width: $breakpoint-lg) {
+  @media screen and (min-width: $breakpoint-md) {
     @for $i from 1 through 12 {
       .tl-col--lg-#{$i} {
-        flex-basis: 100% * $i/12;
+        flex-grow: 1;
+        flex-shrink: 0;
+        flex-basis: calc(100% * #{$i} / 12 - var(--col-gap));
+      }
+    }
+  }
+  @media screen and (min-width: $breakpoint-lg) {
+    @for $i from 1 through 12 {
+      .tl-col--xlg-#{$i} {
+        flex-grow: 1;
+        flex-shrink: 0;
+        flex-basis: calc(100% * #{$i} / 12 - var(--col-gap));
       }
     }
   }
